tooling/nargo_cli/tests/snapshots/execution_success/array_neq/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: [Field; 32], b: [Field; 32]) {
    assert(a != b);
}
